# smart-serow

./: .gitignore  IDEAS.md  LICENSE  README.md
arduino/: .gitignore  IMU.md  PROTOCOL.md  README.md  hello.ino
arduino/main/: comms.cpp  comms.h  gear.cpp  gear.h  imu.cpp  imu.h  main.ino  rpm.cpp  rpm.h  voltage.cpp  voltage.h
extra/: README.md
extra/themes/: default.json  rei.json
pi/backend/: README.md  arduino_service.py  gpio_service.py  gps_service.py  main.py  pyproject.toml  throttle.py
pi/ui/: .gitignore  config.json  pubspec.yaml
pi/ui/assets/: .gitignore
pi/ui/assets/images/: .gitignore
pi/ui/fonts/: .gitignore
pi/ui/lib/: README.md  app_root.dart  main.dart
pi/ui/lib/screens/: dashboard_screen.dart  overheat_screen.dart  splash_screen.dart
pi/ui/lib/services/: backend_service.dart  config_service.dart  overheat_monitor.dart  pi_io.dart  test_flipflop_service.dart  theme_service.dart  websocket_service.dart
pi/ui/lib/theme/: app_theme.dart
pi/ui/lib/widgets/: accel_graph.dart  debug_console.dart  gps_compass.dart  navigator_widget.dart  stat_box.dart  stat_box_main.dart  system_bar.dart  whiskey_mark.dart
scripts/: .gitignore  README.md  build-deploy.py  build-deploy.sh  build.py  build.sh  deploy.py  deploy.sh  deploy_backend.py  deploy_target.json  deploy_target.sample.json  generate_theme.py  pi_setup.sh  pi_setup_backend.sh  prepare_assets.sh  smartserow-backend.service.sample  smartserow-ui sample.service  smartserow-ui.service
