[project]
name = "smartserow-backend"
version = "0.1.0"
description = "GPS service for Smart Serow"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "gpsdclient>=1.3",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
smartserow-backend = "main:main"

[tool.ruff]
line-length = 100
